// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should HW27CarouselCpm 1`] = `
<div>
  <div>
    <div
      class="carousel"
    >
      <div
        class="item hide "
      >
        <div>
          1
        </div>
      </div>
      <div
        class="item show "
      >
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should HW27CarouselCpm 2`] = `
<div>
  <div>
    <div
      class="carousel"
    >
      <div
        class="item "
      >
        <div>
          2
        </div>
      </div>
      <div
        class="item "
      >
        <div>
          3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should HW27CarouselCpm 3`] = `
<div>
  <div>
    <div
      class="carousel"
    >
      <div
        class="item "
      >
        <div>
          3
        </div>
      </div>
      <div
        class="item "
      >
        <div>
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;
